# ur-sim-ros

./: README.md
urdf_ur20/: CMakeLists.txt  package.xml
urdf_ur20/launch/: display.launch  gazebo.launch
urdf_ur20/meshes/: base_link.STL  link_0.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL
urdf_ur20/urdf/: urdf_UR20_MvS.urdf  urdf_ur20_mvs.csv  urdf_ur20_mvs.urdf
